apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
